--- a/templates/login.html
+++ b/templates/login.html
@@ -53,7 +53,9 @@ button {
             <label>Password : </label>
             <input type="password" placeholder="Enter Password" name="person_password" required>
             <button type="submit">Login</button>
-            <li><a href="{{ url_for('register') }}">New Account</a></li>
+            <li><a href="{{ url_for('register') }}">New Admin Account</a></li>
+            <li><a href="{{ url_for('insorg') }}">New Organization Account</a></li>
+
         </div>
     </form>
 </body>
