--- a/templates/header.html
+++ b/templates/header.html
@@ -12,6 +12,7 @@
     <br class="nav navbar-nav">
         <li><a href="{{ url_for('product') }}">Product</a></li> </br>
       <li><a href="{{ url_for('features') }}">Features</a></li></br>
+      <li><a href="{{ url_for('manufacturers') }}">Manufacturers</a></li></br>
       <li><a href="{{ url_for('hello_world') }}">Logout</a></li></br>
     </ul>
   </div>
