--- a/templates/manufacturer.html
+++ b/templates/manufacturer.html
@@ -80,18 +80,15 @@
                                 <div class="modal-header">
 
 
-                                    <h4 class="modal-title">Update Product</h4>
+                                    <h4 class="modal-title">Update Manufacturer</h4>
 
 
                                  </div>
                                 <div class="modal-body">
                                     <form action="{{url_for('updatemanufacturers')}}" method="POST">
                                         <div class="form-group">
-                                            <label>ID</label>
                                             <input type="hidden"  name="manufacturer_id" value="{{row.manufacturer_id}}">
-                                        </div>
-                                        <div class="form-group">
-                                             <label>Name</label>
+                                            <label>Name</label>
                                             <input type="text" class="form-control" name="manufacturer_name" value="{{row.manufacturer_name}} ">
                                         </div>
 
