Product brands added

--- a/templates/header.html
+++ b/templates/header.html
@@ -13,6 +13,7 @@
         <li><a href="{{ url_for('product') }}">Product</a></li> </br>
       <li><a href="{{ url_for('features') }}">Features</a></li></br>
       <li><a href="{{ url_for('manufacturers') }}">Manufacturers</a></li></br>
+      <li><a href="{{ url_for('productbrands') }}">Product Brands</a></li></br>
       <li><a href="{{ url_for('hello_world') }}">Logout</a></li></br>
     </ul>
   </div>
