--- a/templates/header.html
+++ b/templates/header.html
@@ -14,6 +14,7 @@
       <li><a href="{{ url_for('features') }}">Features</a></li></br>
       <li><a href="{{ url_for('manufacturers') }}">Manufacturers</a></li></br>
       <li><a href="{{ url_for('productbrands') }}">Product Brands</a></li></br>
+      <li><a href="{{ url_for('organization') }}">Organizations</a></li></br>
       <li><a href="{{ url_for('hello_world') }}">Logout</a></li></br>
     </ul>
   </div>
