HTML table created for product/features.

--- a/templates/manufacturer.html
+++ b/templates/manufacturer.html
@@ -20,6 +20,7 @@
                         <th>Address </th>
                         <th>City</th>
                         <th>Country</th>
+                        <th>Action</th>
                     </tr>
                      {% for row in feat %}
                      <tr>
