--- a/templates/productbrands.html
+++ b/templates/productbrands.html
@@ -19,6 +19,7 @@
                         <th>ID</th>
                         <th>Brand Name</th>
                         <th>Manufacturer ID</th>
+                        <th>Action</th>
                     </tr>
                      {% for row in feat %}
                      <tr>
