--- a/templates/header.html
+++ b/templates/header.html
@@ -10,8 +10,9 @@
       <a class="navbar-brand" href="#">Admin Page</a>
     </div>
     <br class="nav navbar-nav">
-        <li><a href="{{ url_for('product') }}">Product</a></li> </br>
+      <li><a href="{{ url_for('product') }}">Product</a></li> </br>
       <li><a href="{{ url_for('features') }}">Features</a></li></br>
+      <li><a href="{{ url_for('product_features') }}">Product/Features</a></li></br>
       <li><a href="{{ url_for('manufacturers') }}">Manufacturers</a></li></br>
       <li><a href="{{ url_for('productbrands') }}">Product Brands</a></li></br>
       <li><a href="{{ url_for('brandOrganization') }}">Brand/Organization</a></li></br>
