--- a/templates/product_features.html
+++ b/templates/product_features.html
@@ -11,7 +11,9 @@
             <div class="col md-12">
                 <div class="jumbotron p-3">
                     <h2>Manage <b>Product/Features </b></h2>
-
+                        <button type="button" class="btn btn-success float-right"
+                                data-toggle="modal" data-target="#mymodal">Link Products and Features
+                        </button>
                     <table class="table table-hover table-dark">
                         <tr>
                             <th>ID</th>
@@ -32,6 +34,55 @@
                     </table>
                 </div>
 
+            </div>
+            <div id="mymodal" class="modal fade" role="dialog">
+                <div class="modal-dialog">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h4 class="modal-title">Add New Product/Features</h4>
+                        </div>
+
+                        <div class="modal-body">
+                            <form action="{{ url_for('linkproductfeatures') }}" method="POST">
+
+                                <div class="form-group">
+                                    <label for="Product M_Syscode-Select">M_syscode:    </label>
+                                    <select id="Product M_Syscode-Select" name="Product M_Syscode-Select" required="">
+                                        {% for row in productData %}
+                                            <option value={{ row.m_syscode }}>{{ row.m_syscode }} [ {{ row.m_syscode }} ] </option>
+                                        {% endfor %}
+                                    </select>
+                                </div>
+
+                                <div class="form-group">
+                                    <label for="Feature ID-select">Feature ID:       </label>
+                                    <select id="Feature ID-select" name="Feature ID-select" required="">
+                                        {% for row in featuresData %}
+                                            <option value={{ row.feature_id }}>{{ row.feature_id }}
+                                                [ {{ row.feature_id }} ]
+                                            </option>
+                                        {% endfor %}
+                                    </select>
+                                </div>
+
+                                <div class="form-group">
+                                    <label>Min Val:</label>
+                                    <input type="text" class="form-control" name="minval" required="">
+                                </div>
+
+                                <div class="form-group">
+                                    <button class="btn btn-primary" type="submit">Link</button>
+                                </div>
+
+                            </form>
+                        </div>
+
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                        </div>
+
+                    </div>
+                </div>
             </div>
 
         </div>
