--- a/templates/header.html
+++ b/templates/header.html
@@ -16,6 +16,8 @@
       <li><a href="{{ url_for('manufacturers') }}">Manufacturers</a></li></br>
       <li><a href="{{ url_for('productbrands') }}">Product Brands</a></li></br>
       <li><a href="{{ url_for('brandOrganization') }}">Brand/Organization</a></li></br>
+      <li><a href="{{ url_for('organization') }}">Organization</a></li></br>
+
       <li><a href="{{ url_for('hello_world') }}">Logout</a></li></br>
     </ul>
   </div>
