--- a/templates/organization.html
+++ b/templates/organization.html
@@ -114,7 +114,7 @@
                                 <div class="modal-header">
 
 
-                                    <h4 class="modal-title">Are You Sure To Delete ? </h4>
+                                    <h4 class="modal-title">Are You Sure To Cascade Delete ? </h4>
 
 
                                  </div>
