Brand/Alternative Brand form done.

--- a/templates/header.html
+++ b/templates/header.html
@@ -15,9 +15,10 @@
       <li><a href="{{ url_for('product_features') }}">Product/Features</a></li></br>
       <li><a href="{{ url_for('manufacturers') }}">Manufacturers</a></li></br>
       <li><a href="{{ url_for('productbrands') }}">Product Brands</a></li></br>
-      <li><a href="{{ url_for('brandOrganization') }}">Brand/Organization</a></li></br>
       <li><a href="{{ url_for('organization') }}">Organization</a></li></br>
-
+      <li><a href="{{ url_for('brandOrganization') }}">Brand/Organization</a></li></br>
+      <li><a href="{{ url_for('BrandAlternativeBrand') }}">Alternative Brands</a></li></br>
+      <li><a href="{{ url_for('flow') }}">Flow</a></li></br>
       <li><a href="{{ url_for('hello_world') }}">Logout</a></li></br>
     </ul>
   </div>
