--- a/templates/brand-alternativebrand.html
+++ b/templates/brand-alternativebrand.html
@@ -10,9 +10,9 @@
         <div class="row">
             <div class="col md-12">
                 <div class="jumbotron p-3">
-                    <h2>Manage <b>Brand/Organization </b>
+                    <h2>Manage <b>Alternative Brands </b>
                         <button type="button" class="btn btn-success float-right"
-                                data-toggle="modal" data-target="#mymodal">Link Brands and Organizations
+                                data-toggle="modal" data-target="#mymodal">Add Alternative Brands
                         </button>
                     </h2>
 
@@ -43,7 +43,7 @@
                 <div class="modal-dialog">
                     <div class="modal-content">
                         <div class="modal-header">
-                            <h4 class="modal-title">Add New Manufacturer</h4>
+                            <h4 class="modal-title">Add Alternative Brands</h4>
                         </div>
 
                         <div class="modal-body">
